syntax = "proto3";

package rapid.admin_api.v1;

import "google/api/annotations.proto";
import "rapid/admin_api/v1/api_asset.proto";
import "rapid/admin_api/v1/api_staff.proto";
import "rapid/admin_api/v1/api_tenant.proto";

service AdminV1Service {
  rpc CreateAssetPresignedURL(CreateAssetPresignedURLRequest) returns (CreateAssetPresignedURLResponse) {
    option (google.api.http) = {
      post: "/admin/v1/assets/-/presigned_url"
      body: "*"
    };
  }
  rpc GetTenant(GetTenantRequest) returns (GetTenantResponse) {
    option (google.api.http) = {get: "/admin/v1/tenants/{tenant_id}"};
  }
  rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse) {
    option (google.api.http) = {get: "/admin/v1/tenants"};
  }
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse) {
    option (google.api.http) = {
      post: "/admin/v1/tenants"
      body: "*"
    };
  }
  rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse) {
    option (google.api.http) = {
      patch: "/admin/v1/tenants/{tenant_id}"
      body: "*"
    };
  }
  rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse) {
    option (google.api.http) = {delete: "/admin/v1/tenants/{tenant_id}"};
  }
  rpc CreateStaff(CreateStaffRequest) returns (CreateStaffResponse) {
    option (google.api.http) = {
      post: "/admin/v1/staffs"
      body: "*"
    };
  }
}
