syntax = "proto3";

package rapid.staff_api.v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "rapid/staff_api/v1/model_pagination.proto";
import "rapid/staff_api/v1/model_staff.proto";

// Get
message GetStaffRequest {
  string staff_id = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["staff_id"]
    }
  };
}

message GetStaffResponse {
  Staff staff = 1;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["staff"]
    }
  };
}

// List
message ListStaffsRequest {
  uint64 page = 1;
  uint64 limit = 2;

  enum ListStaffsSortKey {
    LIST_STAFFS_SORT_KEY_UNSPECIFIED = 0;
    LIST_STAFFS_SORT_KEY_CREATED_AT_DESC = 1;
    LIST_STAFFS_SORT_KEY_CREATED_AT_ASC = 2;
    LIST_STAFFS_SORT_KEY_DISPLAY_NAME_ASC = 3;
    LIST_STAFFS_SORT_KEY_DISPLAY_NAME_DESC = 4;
  }

  optional ListStaffsSortKey sort_key = 3;
}

message ListStaffsResponse {
  repeated Staff staffs = 1;
  Pagination pagination = 2;

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "staffs",
        "pagination"
      ]
    }
  };
}
